# range

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  QUICKSTART  README.md  TODO  configure  configure.ac  groups.cf.good
Seco_Range/: Range.pm
attic/apache-mod-ranged-lwes/root/etc/httpd/conf.d/: mod_range.conf
attic/apache-mod-ranged-lwes/scripts/: build
attic/apache-mod-ranged-lwes/source/: Makefile.regular  mod_yahoo_range.c
attic/librange-multipkg/: index.yaml
attic/librange-multipkg/root/var/libcrange/perl/: LibrangeUtils.pm
attic/librange-multipkg/scripts/: ybuild
attic/librange-ocaml/source/: Makefile  admins.ml  admins.mli  ast.mli  mlrange.ml  netblocks.ml  netblocks.mli  range.h  range_utils.ml  range_utils.mli  testrange-reps.c  testrange.c  tinydns.mli
attic/mod_ranged-multipkg/scripts/: post.sh
attic/nodes-cf-edit/: index.yaml
attic/perl-Seco-Data-Writer/source/t/: seco.t
clients/perl/perl-Libcrange/: Makefile.PL  build
clients/perl/perl-Seco-AwesomeRange/scripts/: build
clients/perl/perl-Seco-AwesomeRange/source/: MANIFEST  Makefile
clients/perl/perl-Seco-AwesomeRange/source/fallback/: const-c.inc
clients/perl/perl-Seco-Libcrange/: index.yaml
clients/perl/perl-Seco-Libcrange/source/t/: Seco-Libcrange.t
clients/php/: range_client.php
clients/python/py-seco-librange/source/: secorange.c
clients/python/py-seco-range/source/: setup.py
doc/: Makefile.in
libcrange/: .travis.yml  index.yaml
libcrange/root/etc/: libcrange.conf.example
libcrange/root/var/libcrange/perl/: LibrangeAdminscf.pm  LibrangeCentcom.pm  LibrangeOpsdb.pm  LibrangeSS.pm
libcrange/scripts/: build  post.sh
libcrange/source/: config.h.in  configure.ac  doit.sh  testit.sh
libcrange/source/functions/: Makefile.am  group-mysql.c  group-sqlite.c  hosts-netblocks.c  hosts-netblocks.h  netblock.c  netblock.h  nodescf.c  sqlite.c  tinydns_ip.c  tinydns_ip.h  yamlfile.c  yst-ip-list.c
libcrange/source/perl/: Libcrange.xs  Makefile.PL.in  build.in
libcrange/source/perl/lib/: Libcrange.pm
libcrange/source/src/: Makefile.am  ast.c  ast.h  config.h  crange.i  libcrange.c  libcrange.h  main.c  perl_functions.c  perl_functions.h  range.c  range.h  range_compress.c  range_compress.h  range_parser.y  range_scanner.h  range_scanner.l  range_sort.c  set.c  set.h
libcrange/source/t/: crange.t  funny_data_in_clusters.t  set_ops.t
libcrange/source/t/test_configs/crange1/etc/: dns_data.tinydns
libcrange/source/t/test_configs/crange1/rangedata/: GROUPS.yaml
libcrange/source/t/test_configs/funny_data_in_clusters/etc/: range.conf  yst-ip-list
libcrange/source/t/test_configs/funny_data_in_clusters/rangedata/: .urls.yaml.swp  urls.yaml
librange/: Makefile.am  configure  configure.ac  index.yaml
librange/apache_mod_range/: Makefile.in
librange/functions/: sqlite.c  yst-ip-list.c
librange/source/: Makefile  OCamlMakefile  evaluate.ml  evaluate.mli  hosts_netblocks.ml  lexer.mll  librange.c  memoize.ml  netmask.ml  netmask.mli  parser.mly  range.ml  rip_objects_hack.sh  tinydns.ml
librange/src/: Makefile.am  ast.c  config.h  libcrange-embed.pl  libcrange.c  libcrange.h  range.c  range.h  range_parts.c  range_request.c  range_request.h  range_scanner.l
librange/src/functions/: Makefile.am  ip.c  netblock.c  nodescf.h  pgsql.c  tinydns_ip.h
m4/: yaml.m4
mod_range/: Makefile.am  Makefile.in  configure.ac  mod_range.c  mod_range.conf
mod_range/root/etc/httpd/conf.d/: mod_range.conf
mod_range/scripts/: build
mod_range/source/: Makefile.regular  mod_range.conf
mod_ranged/: index.yaml
mod_ranged/scripts/: build
mod_ranged/source/: Makefile.regular  mod_ranged.c
mod_yahoo_range/: index.yaml
mod_yahoo_range/source/: mod_yahoo_range.conf
perl/perl-Seco-AwesomeRange/source/: AwesomeRange.xs  ppport.h
perl/perl-Seco-AwesomeRange/source/t/: Seco-AwesomeRange.t
perl/perl-Seco-AwesomeRange/source/t/test_cluster1/: nodes.cf
perl/perl-Seco-Data-Range/source/: Makefile.PL  README
perl/perl-Seco-Libcrange/source/: Makefile.PL  README
perl/perl-Seco-Libcrange/source/lib/Seco/: Libcrange.pm
perl_seco_data_range/: index.yaml
perl_seco_data_range/scripts/: build
perl_seco_data_range/source/lib/Seco/Data/: Range.pm
perl_seco_data_range/source/t/: Seco-Data-Range.t
perl_seco_data_writer/: index.yaml
perl_seco_data_writer/source/: Makefile.PL
perl_seco_data_writer/source/lib/Seco/Data/: Writer.pm
perl_seco_libcrange/: index.yaml
perl_seco_libcrange/source/: Changes  Libcrange.xs  MANIFEST  Makefile.PL  ppport.h
perl_seco_libcrange/source/t/: Seco-Libcrange.t
plugins/: Makefile.am  Makefile.in  example.bar.yaml  example.foo.yaml  group-mysql.c  group-sqlite.c  hosts-netblocks.c  hosts-netblocks.h  ip-list.c  ip.c  netblock.c  netblock.h  nodescf.c  nodescf.h  pgsql.c  sqlite.c  tinydns_ip.c  tinydns_ip.h  yamlfile.c  yst-ip-list.c
python_seco_librange/: index.yaml
python_seco_librange/scripts/: build
python_seco_librange/source/: MANIFEST  setup.py
python_seco_range/: index.yaml
python_seco_range/root/etc/range/: range-sync.conf
python_seco_range/scripts/: build
python_seco_range/source/: LICENSE.txt  README.md  requirements.txt  setup.py
python_seco_range/source/seco/: range.py
python_seco_range/source/seco/range/: __init__.py
python_seco_range/source/seco/range/sync/: .svn.py.swp  __init__.py  constants.py  git_sync.py  http.py  index.py  local.py  svn.py  version.py
ruby/: librange.rb
seco_awesomerange/: index.yaml
seco_awesomerange/source/: Changes  Makefile.PL  README  const-c.inc  const-xs.inc
seco_awesomerange/source/t/: compress_range.t  expand_range.t
seco_awesomerange/source/t/test_cluster3/: nodes.cf
src/: Makefile.am  Makefile.in  ast.c  ast.h  config.h.in  crange.i  libcrange_compat.h  librange.c  librange.conf.example  librange.h  main.c  perl_functions.c  perl_functions.h  range.c  range.h  range_compress.c  range_parser_defs.h  range_parts.c  range_parts.h  range_request.c  range_request.h  range_scanner.l  range_sort.h
utils/: index.yaml
(+13 files in other folders)
